@@ -242,11 +242,16 @@ bool convMxM::mxmsolv(std::string dfiname,
   if( (DFI_Process->RankList[RankID].HeadIndex[0]-1)%thin_count != 0 ) head[0]++;
   if( (DFI_Process->RankList[RankID].HeadIndex[1]-1)%thin_count != 0 ) head[1]++;
   if( (DFI_Process->RankList[RankID].HeadIndex[2]-1)%thin_count != 0 ) head[2]++;
-  //間引き後のオリジンを求める
+  //間引き後のオリジンを求める(PLOT3D形式については、クラスcdm_DFI_PLOT3D内で実施)
   double l_dorg[3];
-  l_dorg[0]= DFI_Domain->GlobalOrigin[0]+head[0]*out_dpit[0];
-  l_dorg[1]= DFI_Domain->GlobalOrigin[1]+head[1]*out_dpit[1];
-  l_dorg[2]= DFI_Domain->GlobalOrigin[2]+head[2]*out_dpit[2];
+  l_dorg[0]= DFI_Domain->GlobalOrigin[0];
+  l_dorg[1]= DFI_Domain->GlobalOrigin[1];
+  l_dorg[2]= DFI_Domain->GlobalOrigin[2];
+  if( m_param->Get_OutputFormat() != CDM::E_CDM_FMT_PLOT3D) {
+    l_dorg[0] += head[0]*out_dpit[0];
+    l_dorg[1] += head[1]*out_dpit[1];
+    l_dorg[2] += head[2]*out_dpit[2];
+  }
 
   //出力タイプのセット
   CDM::E_CDM_DTYPE d_type;
@@ -318,24 +323,80 @@ bool convMxM::mxmsolv(std::string dfiname,
   tail[0]=head[0]+l_imax_th-1;
   tail[1]=head[1]+l_jmax_th-1;
   tail[2]=head[2]+l_kmax_th-1;
-  cdm_DFI* out_dfi = cdm_DFI::WriteInit<double>(
-                     MPI_COMM_WORLD,
-                     "",
-                     m_param->Get_OutputDir(),
-                     DFI_FInfo->Prefix,
-                     m_param->Get_OutputFormat(),
-                     outGc,
-                     d_type,
-                     DFI_FInfo->NumVariables,
-                     "",
-                     voxel,
-                     out_dpit,
-                     l_dorg,
-                     DFI_Domain->GlobalDivision,
-                     head,
-                     tail,
-                     m_HostName,
-                     CDM::E_CDM_OFF);
+
+  cdm_DFI *out_dfi = NULL;
+  if( DFI_FInfo->DFIType == CDM::E_CDM_DFITYPE_CARTESIAN )
+  {
+    //等間隔格子の場合
+    out_dfi = cdm_DFI::WriteInit<double>(MPI_COMM_WORLD,
+                                         "",
+                                         m_param->Get_OutputDir(),
+                                         DFI_FInfo->Prefix,
+                                         m_param->Get_OutputFormat(),
+                                         outGc,
+                                         d_type,
+                                         DFI_FInfo->NumVariables,
+                                         "",
+                                         voxel,
+                                         out_dpit,
+                                         l_dorg,
+                                         DFI_Domain->GlobalDivision,
+                                         head,
+                                         tail,
+                                         m_HostName,
+                                         CDM::E_CDM_OFF);
+  }
+  else if( DFI_FInfo->DFIType == CDM::E_CDM_DFITYPE_NON_UNIFORM_CARTESIAN )
+  {
+    //不等間隔格子の場合
+    double *coord_X = NULL;
+    double *coord_Y = NULL;
+    double *coord_Z = NULL;
+
+    //全計算領域の座標を渡す
+    coord_X = new double[voxel[0]+1]; //+1はセル数ではなく格子数のため。
+    coord_Y = new double[voxel[1]+1];
+    coord_Z = new double[voxel[2]+1];
+
+    //配列(coord_X,coord_Y,coord_Z)に値をセット
+    //x
+    for(int ni=0; ni<voxel[0]; ni++) {
+      coord_X[ni] = DFI_Domain->NodeX(ni*thin_count);
+    }
+    coord_X[voxel[0]] = DFI_Domain->NodeX(DFI_Domain->GlobalVoxel[0]);
+    //y
+    for(int nj=0; nj<voxel[1]; nj++) {
+      coord_Y[nj] = DFI_Domain->NodeY(nj*thin_count);
+    }
+    coord_Y[voxel[1]] = DFI_Domain->NodeY(DFI_Domain->GlobalVoxel[1]);
+    //z
+    for(int nk=0; nk<voxel[2]; nk++) {
+      coord_Z[nk] = DFI_Domain->NodeZ(nk*thin_count);
+    }
+    coord_Z[voxel[2]] = DFI_Domain->NodeZ(DFI_Domain->GlobalVoxel[2]);
+
+    out_dfi = cdm_DFI::WriteInit<double>(MPI_COMM_WORLD,
+                                         "",
+                                         m_param->Get_OutputDir(),
+                                         DFI_FInfo->Prefix,
+                                         m_param->Get_OutputFormat(),
+                                         outGc,
+                                         d_type,
+                                         DFI_FInfo->NumVariables,
+                                         "",
+                                         voxel,
+                                         coord_X,
+                                         coord_Y,
+                                         coord_Z,
+                                         DFI_Domain->GetCoordinateFile(),
+                                         DFI_Domain->GetCoordinateFileType(),
+                                         DFI_Domain->GetCoordinateFileEndian(),
+                                         DFI_Domain->GlobalDivision,
+                                         head,
+                                         tail,
+                                         m_HostName,
+                                         CDM::E_CDM_OFF);
+  }
   if( out_dfi == NULL ) {
     printf("\tFails to instance dfi\n");
     return false;
@@ -362,8 +423,22 @@ bool convMxM::mxmsolv(std::string dfiname,
   out_dfi->SetcdmProcess(out_Process);
   out_dfi->SetcdmTimeSlice(*TSlice);
 
-  //出力
+  //出力形式（ascii,binary,Fbinary)のセット
   out_dfi->set_output_type(m_param->Get_OutputFormatType());
+
+  //gridファイルを出力(PLOT3D形式，iblankはすべて1にセット)
+  if (m_param->Get_OutputFormat() == CDM::E_CDM_FMT_PLOT3D) {
+    size_t size_ib=(l_imax_th+2*outGc)*(l_jmax_th+2*outGc)*(l_kmax_th+2*outGc);
+    int *iblank;
+    iblank = new int[size_ib];
+    for(int i=0; i<size_ib; i++) {
+      iblank[i] = 1;
+    }
+    out_dfi->WriteGridFile(iblank);
+    delete [] iblank;
+  }
+
+  //フィールドデータ出力
   CDM::E_CDM_OUTPUT_FNAME output_fname = m_param->Get_OutputFilenameFormat();
   out_dfi->set_output_fname(output_fname);
   double tmp_minmax[8];
