@@ -11,6 +11,13 @@ REVISION HISTORY
 ================
 
 ------------------
+2014-12-10
+Edit class convMxM to convert plot3d non-uniform cartesian data
+FCONVのM対Mデータ変換機能において、plot3d形式の不等間隔格子データも変換
+できるようにした。現時点では、不等間隔格子で出力できるのはplot3d形式だけ。
+また、クラスconvMxN内も一部編集した。
+
+------------------
 2014-12-08
 Edit class convMxN to convert plot3d non-uniform cartesian data
 FCONVのM対Nデータ変換機能において、plot3d形式の不等間隔格子データも変換
